<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    tools:context=".UploadMusicActivity">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/cMusic_top_logo"
        android:layout_width="411dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout="@layout/fragment_top_logo" />

    <TextView
        android:id="@+id/cPlaylist_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/lbl_button_createmusic"
        android:textColor="@color/black"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cMusic_top_logo" />

    <TextView
        android:id="@+id/cMusic_music_title_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/lbl_music_title"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.17"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cPlaylist_header" />


    <EditText
        android:id="@+id/music_title_edtext"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/rounded_input_background"
        android:paddingHorizontal="5sp"
        app:layout_constraintStart_toStartOf="@+id/cMusic_music_title_label"
        app:layout_constraintTop_toBottomOf="@+id/cMusic_music_title_label" />

    <TextView
        android:id="@+id/cover_image_lbl_msuic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/lbl_cover_image"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/music_title_edtext"
        app:layout_constraintTop_toBottomOf="@+id/music_title_edtext" />

    <Button
        android:id="@+id/upload_image_btn_music"
        android:layout_width="137dp"
        android:layout_height="45dp"
        android:backgroundTint="@color/button_main"
        android:text="@string/lbl_upload_text"
        app:layout_constraintBottom_toBottomOf="@+id/cover_image_lbl_msuic"
        app:layout_constraintEnd_toEndOf="@+id/music_title_edtext"
        app:layout_constraintTop_toTopOf="@+id/cover_image_lbl_msuic" />

    <TextView
        android:id="@+id/image_file_lbl_music"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/lbl_music_file"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/cover_image_lbl_msuic"
        app:layout_constraintTop_toBottomOf="@+id/cover_image_lbl_msuic" />

    <Button
        android:id="@+id/upload_file_btn_music"
        android:layout_width="137dp"
        android:layout_height="45dp"
        android:backgroundTint="@color/button_main"
        android:text="@string/lbl_upload_text"
        app:layout_constraintBottom_toBottomOf="@+id/image_file_lbl_music"
        app:layout_constraintEnd_toEndOf="@+id/upload_image_btn_music"
        app:layout_constraintTop_toTopOf="@+id/image_file_lbl_music" />

    <Button
        android:id="@+id/btn_upload_music"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_marginBottom="28dp"
        android:backgroundTint="@color/button_main"
        android:text="@string/lbl_button_createmusic"
        app:layout_constraintBottom_toTopOf="@+id/btn_back_create_playlist"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/upload_file_btn_music"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/btn_back_create_playlist"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_marginBottom="124dp"
        android:backgroundTint="@color/button_main"
        android:text="@string/lbl_back"
        app:layout_constraintBottom_toTopOf="@+id/footer_home"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/footer_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout="@layout/fragment_bottom_navbar" />

</androidx.constraintlayout.widget.ConstraintLayout>