<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
             android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="60sp"
        android:background="@color/dark_grey">

        <androidx.constraintlayout.utils.widget.ImageFilterView
            android:id="@+id/imageFilterView"
            android:layout_width="30sp"
            android:layout_height="30sp"
            android:src="@drawable/home_icon"
            app:layout_constraintBottom_toBottomOf="@+id/imageView3"
            app:layout_constraintEnd_toStartOf="@+id/imageView3"
            app:layout_constraintHorizontal_bias="0.400"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageView3"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_footer_home"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/imageFilterView"
            app:layout_constraintStart_toStartOf="@+id/imageFilterView"
            android:textSize="11sp"
            app:layout_constraintTop_toBottomOf="@+id/imageFilterView" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="30sp"
            android:layout_height="30sp"
            android:src="@drawable/discover_song"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.35" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_footer_explore"
            android:textSize="11sp"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="@+id/imageView3"
            app:layout_constraintHorizontal_bias="0.47"
            app:layout_constraintStart_toStartOf="@+id/imageView3"
            app:layout_constraintTop_toBottomOf="@+id/imageView3" />

        <androidx.constraintlayout.utils.widget.ImageFilterView
            android:id="@+id/imageFilterView2"
            android:layout_width="30sp"
            android:layout_height="30sp"

            android:src="@drawable/profile_icon"
            app:layout_constraintBottom_toBottomOf="@+id/imageView3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.600"
            app:layout_constraintStart_toEndOf="@+id/imageView3"
            app:layout_constraintTop_toTopOf="@+id/imageView3"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_footer_profile"
            android:textSize="11sp"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/imageFilterView2"
            app:layout_constraintStart_toStartOf="@+id/imageFilterView2"
            app:layout_constraintTop_toBottomOf="@+id/imageFilterView2" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>